font size on mobile fix

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -112,15 +112,15 @@
     @include mq($from:tablet, $until:desktop) {
     font-size:44px;
     margin-top:-12px;
-    line-height:48px;
+    line-height:56px;
     margin-left:-40px;
     }
 
 
-    @include mq($from:mobile, $until:tablet) {
-    font-size:44px;
+    @include mq($until:tablet) {
+    font-size:42px;
     margin-top:-12px;
-    line-height:48px;
+    line-height:54px;
     }
 
     // @include mq($from:mobile, $until:tablet) {
